eos-deployment-manifests/reactjs/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eos-react-webapp
  labels:
    app: eos-react-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eos-react-webapp
  template:
    metadata:
      labels:
        app: eos-react-webapp
    spec:
      containers:
      - name: eos-react-webapp
        image: 339713094217.dkr.ecr.us-east-1.amazonaws.com/reactjs:latest
        ports:
        - containerPort: 3000
