eos-deployment-manifests/reactjs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eos-react-webapp
spec:
  rules:
  - host: react.339713094217.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eos-react-webapp-service
            port:
              number: 3000
  ingressClassName: nginx
